--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
 
   web:
     build: .
-    command: python3 manage.py runserver 0.0.0.0:9090
+    command: python3 manage.py runserver 0.0.0.0:9090 --settings=config.settings.develop
     volumes:
       - .:/code
     ports:
